intel/bench_214_work/extr_.ccvlibccv_util.c__ccv_sparse_matrix_index_for_hash_with_main/log.txt
bench_214_work/extr_.ccvlibccv_util.c__ccv_sparse_matrix_index_for_hash_with_main/extr_.ccvlibccv_util.c__ccv_sparse_matrix_index_for_hash_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
bench_214_work/extr_.ccvlibccv_util.c__ccv_sparse_matrix_index_for_hash_with_main/extr_.ccvlibccv_util.c__ccv_sparse_matrix_index_for_hash_with_main.c:211:18: error: default initialization of an object of const type 'const uint32_t' (aka 'const unsigned int')
  const uint32_t hash;
                 ^
                      = 0
bench_214_work/extr_.ccvlibccv_util.c__ccv_sparse_matrix_index_for_hash_with_main/extr_.ccvlibccv_util.c__ccv_sparse_matrix_index_for_hash_with_main.c:212:13: error: default initialization of an object of const type 'const int'
  const int prime_index;
            ^
                        = 0
3 errors generated.
HLS FPGA Parse FAILED.
